tests/errors/codec_field_name_collision_plain.dang
# A plain (un-renamed) field colliding with the serialized key of an earlier
# renamed field is a clean compile error, not a compiler crash.

type Collide {
  a: String! @JSON.field(name: "b")
  b: String!
}

print("Should not reach here!")
